[gd_scene load_steps=9 format=2]

[ext_resource path="res://img/displayManager.png" type="Texture" id=1]
[ext_resource path="res://font/FreeSans.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://img/logo.png" type="Texture" id=3]
[ext_resource path="res://script/displayManager.gd" type="Script" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1280, 1012 )

[sub_resource type="DynamicFont" id=2]
size = 20
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 63
font_data = ExtResource( 2 )

[node name="DisplayManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="dm" type="Control" parent="."]
margin_left = 216.0
margin_top = 223.0
margin_right = 544.0
margin_bottom = 396.0

[node name="VBoxContainer" type="VBoxContainer" parent="dm"]
margin_right = 40.0
margin_bottom = 40.0

[node name="userName" type="HBoxContainer" parent="dm/VBoxContainer"]
margin_right = 314.0
margin_bottom = 24.0

[node name="usernameSTR" type="Label" parent="dm/VBoxContainer/userName"]
margin_top = 1.0
margin_right = 115.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
text = "User Name : "

[node name="userNameInput" type="LineEdit" parent="dm/VBoxContainer/userName"]
margin_left = 119.0
margin_right = 280.233
margin_bottom = 24.0
rect_min_size = Vector2( 161.233, 0 )

[node name="password" type="HBoxContainer" parent="dm/VBoxContainer"]
margin_top = 28.0
margin_right = 314.0
margin_bottom = 52.0

[node name="passwordSTR" type="Label" parent="dm/VBoxContainer/password"]
margin_top = 1.0
margin_right = 149.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
text = "User Password : "

[node name="passwordInput" type="LineEdit" parent="dm/VBoxContainer/password"]
margin_left = 153.0
margin_right = 314.233
margin_bottom = 24.0
rect_min_size = Vector2( 161.233, 0 )

[node name="buttons" type="Control" parent="dm/VBoxContainer"]
margin_top = 56.0
margin_right = 314.0
margin_bottom = 56.0

[node name="login" type="Button" parent="dm/VBoxContainer/buttons"]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 3 )
text = "Login"

[node name="welcome" type="Label" parent="."]
margin_left = 48.0
margin_top = 792.0
margin_right = 1211.0
margin_bottom = 862.0
custom_fonts/font = SubResource( 4 )
text = "welcome to GnuChanOS System Universe"

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 920, 376 )
scale = Vector2( 1.50741, 1.50741 )
texture = ExtResource( 3 )

[connection signal="pressed" from="dm/VBoxContainer/buttons/login" to="." method="_on_login_pressed"]
